--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: http://www.claroleticia.com/gdts/
+baseurl: claroleticia.com/gdts/
 
 # Site settings
 title: Awesome Title
