change config and header

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ url: "https://claroleticia.github.io"
 baseurl: "/gdts"
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: GDTS
+email: m.l.oliveira@wustl.edu
+description: "We are a collaborative research network studying gun policy and the transparency of firearm licensing and permitting systems across countries. We analyze how governments collect, publish, and regulate gun-related data to improve accountability and evidence-based policy."
 
 
 # Team names, titles and social links
