--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ description: "We are a collaborative research network studying gun policy and th
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Lorena Barberia
   pic: 1
-  position: Lead Designer
+  position: Lead Researcher
   social:
     - title: twitter
       url: #
@@ -20,9 +20,9 @@ people:
     - title: stack-overflow
       url: #
 
-- name: Larry Parker
+- name: Natalia Pires de Vasconcelos
   pic: 2
-  position: Lead Marketer
+  position: Lead Researcher
   social:
     - title: twitter
       url: #
@@ -31,9 +31,9 @@ people:
     - title: linkedin
       url: #
 
-- name: Diana Petersen
+- name: Leticia Claro Oliveira
   pic: 3
-  position: Lead Developer
+  position: Lead Researcher
   social:
     - title: twitter
       url: #
