--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ people:
     - title: linkedin
       url: #
 
-- name: Leticia Claro Oliveira
+- name: Mateus Tobias Vieria
   pic: 3
   position: Lead Researcher
   social:
